Defect 739: IE moved hero banner up to prevent overlapping

--- a/node-app/src/views/core/components/content/teaser/styles.scss
+++ b/node-app/src/views/core/components/content/teaser/styles.scss
@@ -552,6 +552,11 @@
             }
         }
     }
+    .white-box{
+        .text-section{
+            top:65px;
+        }
+    }
 }
 /* scss for banner images in landscape mode for mobiles start here*/
 @media (min-width:560px) and (max-width:$mobile-screen-max){
